# 42quebec

cpp-piscine/: template.h
cpp-piscine/cpp00/ex00/: Makefile  Megaphone.cpp
cpp-piscine/cpp00/ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp
cpp-piscine/cpp00/ex02/: Account.cpp  Account.hpp  Makefile
cpp-piscine/cpp01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  randomChump.cpp
cpp-piscine/cpp01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
cpp-piscine/cpp01/ex02/: Makefile  main.cpp
cpp-piscine/cpp01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  (+1 more)
cub3d/maps/: good_map_bonus.cub
ft_containers/: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md  settings.mk
ft_containers/.github/workflows/: cmake.yml
ft_containers/inc/: iterator_traits.hpp  reverse_iterator.hpp  type_traits.hpp  vector.hpp
ft_containers/src/: main.cpp  main_std.cpp
ft_containers/test/: Equal.cpp  LexicographicalCompare.cpp  MakePair.cpp  Map.cpp  Pair.cpp  Reverse_Iterator.cpp  Stack.cpp  Type_Traits.cpp  Vector.cpp
ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h
ft_printf/libft/: ft_strchr.c  libft.h
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
inception/: Makefile  README.md
inception/srcs/: docker-compose.yml
libft/: Makefile
libft/inc/: libft.h
libft/src/: ft_isalpha.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstnew.c  ft_memcpy.c  ft_putnbr_fd.c  ft_strjoin.c  ft_strlcpy.c
microshell_exam_test/: README.md  microshell.c
minishell/: Makefile
minishell/inc/: minishell.h
minishell/src/: built_in_cd_exit.c  built_in_env.c  built_in_export_unset.c  built_in_tools.c  check_built_ins.c  exe.c  exe_pipe_tools.c  exe_tools.c  files_tools.c  heredoc.c  lenght_tools.c  lenght_tools2.c  lexer.c  lexer_tools.c  list_tools.c  main.c  quit_clean.c  signals.c  splits.c  splits2.c  tools.c  var.c
philosophers/philo/: Makefile
pipex/: Makefile
pipex/inc/: pipex.h
pipex/src/: clean.c  pipex.c  tools.c  validation.c
push_swap/push_swap/: Makefile  big_sort.c  firstmoves.c  index.c  push_swap.c  push_swap.h  secondmoves.c  sorting.c  tools.c  validation.c
so_long/: Makefile
so_long/inc/: so_long.h
so_long/maps/: big.ber  fail.bar  missingonewall.ber  noexit.ber  nokey.ber  normal.ber  nostart.ber  nowalls.ber  verybig.ber
so_long/mlx/: Key.xpm  exit_locked.xpm  exit_unlocked.xpm  explosion-4.xpm  minotaurleft.xpm  minotaurleftenemy.xpm  minotaurright.xpm  obstacle.xpm  tile1.xpm  wall.xpm  wining_exit.xpm
so_long/src/: assets.c  enemy.c  map.c  play.c  print.c  print_string.c  quit.c  restart.c  so_long.c  validation.c
(+248 files in other folders)
